# ai-memory

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: cli.rs  config.rs  http_client.rs  main.rs
crates/ai-memory-cli/src/commands/: backup.rs  bootstrap.rs  commit.rs  embed.rs  forget_sweep.rs  install_hooks.rs  install_mcp.rs  lint.rs  mod.rs  render_shared.rs  reorg.rs  restore.rs  serve.rs  setup_agent.rs  write_page.rs
crates/ai-memory-consolidate/src/: bootstrap.rs  consolidator.rs  lib.rs
crates/ai-memory-hooks/: Cargo.toml
crates/ai-memory-hooks/src/: router.rs
crates/ai-memory-llm/src/: gemini.rs
crates/ai-memory-mcp/: Cargo.toml
crates/ai-memory-mcp/src/: admin.rs  lib.rs  server.rs
crates/ai-memory-mcp/tests/: admin_backup.rs  admin_bootstrap.rs  admin_phase3.rs  admin_status_search.rs  admin_write_page.rs
crates/ai-memory-store/src/: lib.rs  reader.rs
crates/ai-memory-web/: build.rs
crates/ai-memory-web/src/: templates.rs
crates/ai-memory-web/src/routes/: page.rs  search.rs
crates/ai-memory-web/templates/: page.html  project.html  search.html
crates/ai-memory-web/tests/: routes.rs
crates/ai-memory-wiki/: Cargo.toml
crates/ai-memory-wiki/src/: atomic.rs
docker/: Dockerfile
docs/: design-decisions.md  install.md  llm-provider-comparison.md  windows.md
hooks/claude-code/: post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  session-end.ps1  session-start.ps1  stop.ps1  user-prompt-submit.ps1
hooks/codex/: post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  session-end.ps1  session-start.ps1  stop.ps1  user-prompt-submit.ps1
hooks/cursor/: post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  session-end.ps1  session-start.ps1  stop.ps1  user-prompt-submit.ps1
hooks/gemini-cli/: post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  session-end.ps1  session-start.ps1  stop.ps1  user-prompt-submit.ps1
hooks/lib/: ai-memory-hook.ps1
hooks/opencode/: post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  session-end.ps1  session-start.ps1  stop.ps1  user-prompt-submit.ps1
