[package]
name = "ai-memory-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hook payload schemas, sanitisation, and HTTP ingress for agent lifecycle hooks."

[dependencies]
ai-memory-core.workspace = true
ai-memory-store.workspace = true
ai-memory-wiki.workspace = true
ai-memory-consolidate.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
jiff.workspace = true
uuid.workspace = true
axum.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
git2.workspace = true

[lints]
workspace = true
