[package]
name = "ai-memory-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server transport and tool router for ai-memory."

[dependencies]
ai-memory-core.workspace = true
ai-memory-consolidate.workspace = true
ai-memory-llm.workspace = true
ai-memory-store.workspace = true
ai-memory-wiki.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rmcp.workspace = true
schemars.workspace = true
axum.workspace = true
# Time gap calculation for `memory_explore` (parse stored ISO-8601
# timestamps + delta against now). The rest of the crate doesn't
# need a clock dep.
jiff.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
